@@ -9,6 +9,7 @@ $rpcProxy
 $rpcProxySSL
 $rpcProxyExternalHostname => undef
 $mailboxesDir
+$oofSettingsDir
 </%args>
 #
 # ocsmanager - Pylons configuration
@@ -104,6 +105,22 @@ ssl = false
 
 # Out of office configuration
 [outofoffice]
+# Set the backend.
+# Possible backends: file, managesieve
+# file makes sieve and OCSManager lives in the same host
+# managesieve indicates the server to put/get the sieve script
+backend = file
+
+# Temporary directory where OOF settings are stored
+#   Expansion variables (example user.name@example.com):
+#       $domain   = example.com
+#       $user     = user.name
+#       $fulluser = user.name@example.com
+tmp_settings_path = <% $oofSettingsDir %>/$domain/$user/oof-settings
+# If the oof settings directory hierarchy does not exist, it will be created
+tmp_settings_path_mkdir = true
+
+[outofoffice:file]
 # Path of the sieve script for the user
 #   Expansion variables (example user.name@example.com):
 #       $domain   = example.com
@@ -111,6 +128,14 @@ ssl = false
 #       $fulluser = user.name@example.com
 sieve_script_path = <% $mailboxesDir %>/$domain/$user/sieve-script
 sieve_script_path_mkdir = true
+
+[outofoffice:managesieve]
+# It requires to have a master password to get into every account
+# server = 127.0.0.1
+# SSL on/off
+# ssl = true
+# Master password
+# secret = secret
 
 # Logging configuration
 [loggers]
